--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@ ul {
     margin: 0;
     padding: 0;
 }
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;  
+  }
+  
+  .search_field {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+  }
